style: Prevent sidebar title from wrapping on mobile
- Add whitespace-nowrap to sidebar title
- Keeps 'Yowu's DevTools' text on a single line

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@
 }
 
 :root {
-  font-family: 'NanumSquareNeo', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'NanumSquareNeo', Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
 }
 
 html {
@@ -25,7 +26,7 @@ html {
 }
 
 /* 체크박스 스타일 개선 */
-input[type="checkbox"] {
+input[type='checkbox'] {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -34,7 +35,7 @@ input[type="checkbox"] {
   position: relative;
 }
 
-input[type="checkbox"]:checked {
+input[type='checkbox']:checked {
   background-color: rgb(37 99 235); /* blue-600 */
   border-color: rgb(37 99 235);
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L4 12.586l7.793-7.793a1 1 0 011.414 0z'/%3e%3c/svg%3e");
@@ -43,13 +44,13 @@ input[type="checkbox"]:checked {
   background-repeat: no-repeat;
 }
 
-.dark input[type="checkbox"]:checked {
+.dark input[type='checkbox']:checked {
   background-color: rgb(59 130 246); /* blue-500 */
   border-color: rgb(59 130 246);
 }
 
 /* 라디오 버튼 스타일 개선 */
-input[type="radio"] {
+input[type='radio'] {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -62,12 +63,12 @@ input[type="radio"] {
   background-color: white;
 }
 
-input[type="radio"]:checked {
+input[type='radio']:checked {
   border-color: rgb(37 99 235); /* blue-600 */
   background-color: rgb(37 99 235);
 }
 
-input[type="radio"]:checked::after {
+input[type='radio']:checked::after {
   content: '';
   position: absolute;
   top: 50%;
@@ -79,12 +80,12 @@ input[type="radio"]:checked::after {
   background-color: white;
 }
 
-.dark input[type="radio"] {
+.dark input[type='radio'] {
   border-color: rgb(75 85 99); /* gray-600 */
   background-color: rgb(17 24 39); /* gray-900 */
 }
 
-.dark input[type="radio"]:checked {
+.dark input[type='radio']:checked {
   border-color: rgb(59 130 246); /* blue-500 */
   background-color: rgb(59 130 246);
 }
@@ -93,70 +94,70 @@ input[type="radio"]:checked::after {
 /* CSS Modules를 사용하므로 속성 선택자를 사용하여 오버라이드 */
 
 /* 배경색 - 밝은 회색을 투명하게 변경 (밝은 모드) */
-[class*="_2IvMF"] {
+[class*='_2IvMF'] {
   background: transparent !important;
   background-color: transparent !important;
 }
 
 /* JSON 뷰의 모든 배경 요소 투명화 (밝은 모드) */
-[class*="_GzYRV"] {
+[class*='_GzYRV'] {
   background: transparent !important;
   background-color: transparent !important;
 }
 
 /* 다크 모드에서도 투명 유지 */
-.dark [class*="_2IvMF"] {
+.dark [class*='_2IvMF'] {
   background: transparent !important;
   background-color: transparent !important;
 }
 
-.dark [class*="_GzYRV"] {
+.dark [class*='_GzYRV'] {
   background: transparent !important;
   background-color: transparent !important;
 }
 
 /* 기본 텍스트 색상 */
-.dark [class*="_1MGIk"],
-.dark [class*="_3uHL6"],
-.dark [class*="_oLqym"],
-.dark [class*="_2AXVT"],
-.dark [class*="_2KJWg"],
-.dark [class*="_GzYRV"] {
+.dark [class*='_1MGIk'],
+.dark [class*='_3uHL6'],
+.dark [class*='_oLqym'],
+.dark [class*='_2AXVT'],
+.dark [class*='_2KJWg'],
+.dark [class*='_GzYRV'] {
   color: rgb(243 244 246) !important; /* gray-100 */
 }
 
 /* 키 색상 */
-.dark [class*="_1bQdo"] {
+.dark [class*='_1bQdo'] {
   color: rgb(147 197 253) !important; /* blue-300 */
 }
 
 /* 문자열 색상 */
-.dark [class*="_3zQKs"] {
+.dark [class*='_3zQKs'] {
   color: rgb(134 239 172) !important; /* green-300 */
 }
 
 /* 숫자 색상 */
-.dark [class*="_vGjyY"] {
+.dark [class*='_vGjyY'] {
   color: rgb(251 191 36) !important; /* amber-400 */
 }
 
 /* 불리언 색상 */
-.dark [class*="_2T6PJ"],
-.dark [class*="_1Gho6"] {
+.dark [class*='_2T6PJ'],
+.dark [class*='_1Gho6'] {
   color: rgb(251 146 60) !important; /* orange-400 */
 }
 
 /* null 색상 */
-.dark [class*="_1xvuR"] {
+.dark [class*='_1xvuR'] {
   color: rgb(168 85 247) !important; /* purple-400 */
 }
 
 /* 확장 아이콘 색상 */
-.dark [class*="_f10Tu"] {
+.dark [class*='_f10Tu'] {
   color: rgb(156 163 175) !important; /* gray-400 */
 }
 
-.dark [class*="_f10Tu"]:hover {
+.dark [class*='_f10Tu']:hover {
   color: rgb(243 244 246) !important; /* gray-100 */
 }
 
